# memento

./: .gitignore  CLAUDE.md  Procfile  pyproject.toml
.github/workflows/: deploy.yml
.jules/: sentinel.md
docs/: architecture.md  deployment.md  design-assets.md  github-marketplace-listing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppMockup.tsx  AppSidebar.tsx  DocViewer.tsx  FeatureIcons.tsx  FileTree.tsx  FolderView.tsx  IssuesTable.tsx  TocSidebar.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  DocPage.tsx  GraphPage.tsx  HelpPage.tsx  IssuesPage.tsx  NewProjectPage.tsx  SettingsPage.tsx  WelcomePage.tsx
infra/prod/: memento-mcp.service  nginx-mcp.conf  nginx.conf  service.conf
memento/: __init__.py  app.py  auth.py  config.py  db.py  github_app.py  mail_sender.py  mcp_auth.py  mcp_server.py  repo.py  tests_security.py
memento/routes/: __init__.py  admin.py  docs.py  github.py  global_admin.py  projects.py  settings.py
memento/static/: app.js
memento/templates/: index.html
mento/: app.py  auth.py  db.py  email.py  github_app.py  knowledge_graph.py  mcp_server.py  repo.py
mento/routes/: docs.py  projects.py
mento/tests/: test_auth_security.py
